--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ variables:
   azureServiceConnectionId: 'fa063075-bcbf-4ec3-9211-5d7e2ef9e550'
 
   # Web app name
-  webAppName: 'test-python-flask'
+  webAppName: 'msdocs-python-flask-webapp-quickstart'
 
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
