--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,9 +80,17 @@ stages:
               versionSpec: '$(pythonVersion)'
             displayName: 'Use Python version'
 
+          # - task: AzureWebApp@1
+          #   displayName: 'Deploy Azure Web App : '
+          #   inputs:
+          #     azureSubscription: $(azureServiceConnectionId)
+          #     appName: $(webAppName)
+          #     package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+                    
           - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App : '
             inputs:
-              azureSubscription: $(azureServiceConnectionId)
-              appName: $(webAppName)
+              azureSubscription: 'Azure subscription 1 (eae93285-6796-495c-a0d6-4b1a1446a7c1)'
+              appType: 'webAppLinux'
+              appName: 'pythonwebapptesthimanshu'
               package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
+              runtimeStack: 'PYTHON|3.12'
